Plug SRM into build
We have the SRM landed, this patch plugs it into our build and
eliminates the dependency on serviceutils.

This needs to pick up a few serviceutils classes, which are included
here from their d25834a5a76c52a4f860e3b356cc97881eb4d998 versions, cut
down to minimize footprint.

JIRA: OPNFLWPLUG-1134
Change-Id: Ie7f75ceaad2ac07ec6f265c92d08749121e26429
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/odl-openflowplugin-southbound/pom.xml
+++ b/features/odl-openflowplugin-southbound/pom.xml
@@ -20,30 +20,8 @@
             <!-- This project -->
             <dependency>
                 <groupId>org.opendaylight.openflowplugin</groupId>
-                <artifactId>openflowplugin-artifacts</artifactId>
+                <artifactId>openflowplugin-parent</artifactId>
                 <version>${project.version}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <!-- Controller infrastructure -->
-            <dependency>
-                <groupId>org.opendaylight.controller</groupId>
-                <artifactId>controller-artifacts</artifactId>
-                <version>10.0.9</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opendaylight.infrautils</groupId>
-                <artifactId>infrautils-artifacts</artifactId>
-                <version>7.1.2</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opendaylight.serviceutils</groupId>
-                <artifactId>serviceutils-artifacts</artifactId>
-                <version>0.14.2</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -52,6 +30,12 @@
 
     <dependencies>
         <!-- feature dependencies -->
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>odl-controller-blueprint</artifactId>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>odl-mdsal-broker</artifactId>
@@ -109,10 +93,16 @@
             <artifactId>openflowplugin-extension-onf</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.serviceutils</groupId>
-            <artifactId>odl-serviceutils-srm</artifactId>
-            <classifier>features</classifier>
-            <type>xml</type>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>srm-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>srm-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>srm-shell</artifactId>
         </dependency>
 
         <!-- config files -->
