--- a/srm/pom.xml
+++ b/srm/pom.xml
@@ -7,46 +7,28 @@ terms of the Eclipse Public License v1.0 which accompanies this distribution,
 and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.opendaylight.odlparent</groupId>
-    <artifactId>odlparent-lite</artifactId>
-    <version>14.0.3</version>
-    <relativePath/>
-  </parent>
+    <parent>
+        <groupId>org.opendaylight.odlparent</groupId>
+        <artifactId>odlparent-lite</artifactId>
+        <version>14.0.3</version>
+        <relativePath/>
+    </parent>
 
-  <groupId>org.opendaylight.serviceutils</groupId>
-  <artifactId>srm-aggregator</artifactId>
-  <version>0.15.0-SNAPSHOT</version>
-  <!-- <name> formatting is used by autorelease to parse and notify projects on
-       build failure. Please do not modify this unless you have a good reason. -->
-  <name>ODL :: serviceutils :: ${project.artifactId}</name>
-  <packaging>pom</packaging>
+    <groupId>org.opendaylight.openflowplugin</groupId>
+    <artifactId>srm-aggregator</artifactId>
+    <version>0.20.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <modules>
-    <module>api</module>
-    <module>impl</module>
-    <module>shell</module>
-  </modules>
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.install.skip>true</maven.install.skip>
+    </properties>
 
-  <!-- DO NOT install or deploy the repo root pom as it's only needed to initiate a build -->
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <modules>
+        <module>api</module>
+        <module>impl</module>
+        <module>shell</module>
+    </modules>
 </project>
