Clean up use of yang-ext
We have a better module replacing the codegen functionality of yang-ext:
odl-codegen-extensions.

Update models to use this replacement, simplifying dependencies a bit.

Change-Id: Ie57455c0827f1c3dd55999364720437c61f46dc6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 7f21e288f6d1b9972564c2124708ce9d8ad8a6b9)

--- a/extension/openflowjava-extension-nicira/pom.xml
+++ b/extension/openflowjava-extension-nicira/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>netty-buffer</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <artifactId>rfc6991-ietf-inet-types</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <artifactId>rfc6991-ietf-yang-types</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
             <artifactId>openflow-protocol-api</artifactId>
         </dependency>
@@ -29,16 +37,22 @@
             <artifactId>openflow-protocol-spi</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
-            <artifactId>openflowjava-util</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
             <artifactId>openflowjava-extension-nicira-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>codegen-extensions</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common-netty</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
+            <artifactId>openflowjava-util</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
