--- a/extension/openflowplugin-extension-eric/pom.xml
+++ b/extension/openflowplugin-extension-eric/pom.xml
@@ -14,6 +14,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>codegen-extensions</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>concepts</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>openflowplugin-extension-api</artifactId>
         </dependency>
@@ -43,12 +51,5 @@
             <groupId>${project.groupId}.openflowjava</groupId>
             <artifactId>openflow-protocol-api</artifactId>
         </dependency>
-        <!-- Test dependencies -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
-
 </project>
