--- a/extension/openflowjava-extension-eric/pom.xml
+++ b/extension/openflowjava-extension-eric/pom.xml
@@ -26,12 +26,11 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-common-netty</artifactId>
+            <artifactId>odl-codegen-extensions</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <scope>test</scope>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-common-netty</artifactId>
         </dependency>
     </dependencies>
 </project>
