--- a/openflowjava/openflow-protocol-impl/pom.xml
+++ b/openflowjava/openflow-protocol-impl/pom.xml
@@ -17,6 +17,10 @@
       <tag>HEAD</tag>
     </scm>
 
+    <properties>
+        <odlparent.modernizer.enforce>false</odlparent.modernizer.enforce>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
