Remove dependency on serviceutils/upgrade
This imports serviceutils.git/upgrade as of
https://github.com/opendaylight/serviceutils/tree/d25834a5a76c52a4f860e3b356cc97881eb4d998/upgrade
and removes the dependency on it.

Also take care to clean up dependencies and enable enforcement, so they
end up being maintained in face of changes.

Change-Id: Iabd0ef1baecb4b75ebfb75d92cb9776e03ee9407
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/applications/arbitratorreconciliation/impl/pom.xml
+++ b/applications/arbitratorreconciliation/impl/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>arbitratorreconciliation-impl</artifactId>
     <packaging>bundle</packaging>
 
+    <properties>
+        <odlparent.dependency.enforce>true</odlparent.dependency.enforce>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.guicedee.services</groupId>
@@ -24,8 +28,20 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-binding-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-common-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.opendaylight.openflowplugin</groupId>
             <artifactId>openflowplugin-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin</groupId>
+            <artifactId>openflowplugin-extension-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.openflowplugin.applications</groupId>
@@ -36,8 +52,20 @@
             <artifactId>reconciliation-framework</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.serviceutils</groupId>
-            <artifactId>upgrade</artifactId>
+            <groupId>org.opendaylight.openflowplugin.model</groupId>
+            <artifactId>model-flow-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.openflowplugin.model</groupId>
+            <artifactId>model-inventory</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>concepts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>util</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
