--- a/applications/forwardingrules-sync/pom.xml
+++ b/applications/forwardingrules-sync/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin</groupId>
         <artifactId>openflowplugin-parent</artifactId>
-        <version>0.20.0</version>
+        <version>0.20.1-SNAPSHOT</version>
         <relativePath>../../parent</relativePath>
     </parent>
 
