--- a/distribution/karaf/pom.xml
+++ b/distribution/karaf/pom.xml
@@ -8,11 +8,11 @@
   </parent>
   <groupId>org.opendaylight.openflowplugin</groupId>
   <artifactId>openflowplugin-karaf</artifactId>
-  <version>0.20.0</version>
+  <version>0.20.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
-    <openflowplugin.version>0.20.0</openflowplugin.version>
+    <openflowplugin.version>0.20.1-SNAPSHOT</openflowplugin.version>
   </properties>
 
   <dependencyManagement>
