--- a/features/odl-openflowplugin-app-lldp-speaker/pom.xml
+++ b/features/odl-openflowplugin-app-lldp-speaker/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-app-lldp-speaker</artifactId>
     <packaging>feature</packaging>
-    <version>0.20.0</version>
+    <version>0.20.1-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: Application - LLDP Speaker</name>
 
