--- a/libraries/liblldp/pom.xml
+++ b/libraries/liblldp/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>openflowplugin-parent</artifactId>
-    <version>0.20.0</version>
+    <version>0.20.1-SNAPSHOT</version>
     <relativePath>../../parent</relativePath>
   </parent>
 
