--- a/openflowjava/openflow-protocol-it/pom.xml
+++ b/openflowjava/openflow-protocol-it/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
         <artifactId>openflowjava-parent</artifactId>
-        <version>0.20.0</version>
+        <version>0.20.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>openflow-protocol-it</artifactId>
