--- a/openflowjava/openflowjava-blueprint-config/pom.xml
+++ b/openflowjava/openflowjava-blueprint-config/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
         <artifactId>openflowjava-parent</artifactId>
-        <version>0.20.0</version>
+        <version>0.20.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <artifactId>openflowjava-blueprint-config</artifactId>
