--- a/openflowjava/openflowjava-util/pom.xml
+++ b/openflowjava/openflowjava-util/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.opendaylight.openflowplugin.openflowjava</groupId>
         <artifactId>openflowjava-parent</artifactId>
-        <version>0.20.0</version>
+        <version>0.20.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
     <packaging>bundle</packaging>
