--- a/applications/forwardingrules-manager/pom.xml
+++ b/applications/forwardingrules-manager/pom.xml
@@ -29,6 +29,11 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.checkerframework</groupId>
+      <artifactId>checker-qual</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.mdsal</groupId>
       <artifactId>mdsal-binding-api</artifactId>
     </dependency>
