Fix device-ownership-service dependencies
We have a few warnings here, fix them up and flip enforcement on.

Change-Id: I0cee1abca2f7bb4779640bbc887c9d11404a6197
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/applications/device-ownership-service/pom.xml
+++ b/applications/device-ownership-service/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>device-ownership-service</artifactId>
     <packaging>bundle</packaging>
 
+    <properties>
+        <odlparent.dependency.enforce>true</odlparent.dependency.enforce>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.guicedee.services</groupId>
@@ -26,6 +30,22 @@
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
             <artifactId>mdsal-eos-binding-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-eos-common-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal.model</groupId>
+            <artifactId>general-entity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>binding-spec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>concepts</artifactId>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
