WIP: Bump upstreams
Adopt:
- ietf-1.0.0
- mdsal-15.0.0
- controller-12.0.0
- netconf-10.0.0-SNAPSHOT

// FIXME: more adaptations before

Change-Id: If7ef958341006154a4e01027afab3db3e3467245
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/openflowjava/openflowjava-util/pom.xml
+++ b/openflowjava/openflowjava-util/pom.xml
@@ -28,11 +28,11 @@
             <artifactId>netty-buffer</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <groupId>org.opendaylight.ietf.model</groupId>
             <artifactId>rfc6991-ietf-inet-types</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <groupId>org.opendaylight.ietf.model</groupId>
             <artifactId>rfc6991-ietf-yang-types</artifactId>
         </dependency>
         <dependency>
