--- a/extension/openflowplugin-extension-nicira/pom.xml
+++ b/extension/openflowplugin-extension-nicira/pom.xml
@@ -24,11 +24,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <groupId>org.opendaylight.ietf.model</groupId>
             <artifactId>rfc6991-ietf-inet-types</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <groupId>org.opendaylight.ietf.model</groupId>
             <artifactId>rfc6991-ietf-yang-types</artifactId>
          </dependency>
         <dependency>
