--- a/openflowjava/openflow-protocol-spi/pom.xml
+++ b/openflowjava/openflow-protocol-spi/pom.xml
@@ -24,7 +24,7 @@
             <artifactId>openflow-protocol-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opendaylight.mdsal.binding.model.ietf</groupId>
+            <groupId>org.opendaylight.ietf.model</groupId>
             <artifactId>rfc6991-ietf-inet-types</artifactId>
         </dependency>
     </dependencies>
