--- a/features/odl-openflowplugin-app-topology-lldp-discovery/pom.xml
+++ b/features/odl-openflowplugin-app-topology-lldp-discovery/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-app-topology-lldp-discovery</artifactId>
     <packaging>feature</packaging>
-    <version>0.21.1</version>
+    <version>0.21.2-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: Application - Topology LLDP Discovery</name>
 
