--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>libraries-aggregator</artifactId>
-    <version>0.21.1</version>
+    <version>0.21.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
