--- a/model/model-inventory/pom.xml
+++ b/model/model-inventory/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>openflowplugin-parent</artifactId>
-    <version>0.21.1</version>
+    <version>0.21.2-SNAPSHOT</version>
     <relativePath>../../parent</relativePath>
   </parent>
 
