--- a/srm/impl/pom.xml
+++ b/srm/impl/pom.xml
@@ -11,7 +11,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <parent>
         <groupId>org.opendaylight.openflowplugin</groupId>
         <artifactId>openflowplugin-parent</artifactId>
-        <version>0.21.1</version>
+        <version>0.21.2-SNAPSHOT</version>
         <relativePath>../../parent</relativePath>
     </parent>
 
