--- a/artifacts/pom.xml
+++ b/artifacts/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>openflowplugin-artifacts</artifactId>
-    <version>0.21.2</version>
+    <version>0.21.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <dependencyManagement>
