--- a/features/odl-openflowplugin-app-bulk-o-matic/pom.xml
+++ b/features/odl-openflowplugin-app-bulk-o-matic/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-app-bulk-o-matic</artifactId>
     <packaging>feature</packaging>
-    <version>0.21.2</version>
+    <version>0.21.3-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: Application -  bulk flow operations support</name>
 
