--- a/features/odl-openflowplugin-flow-services-rest/pom.xml
+++ b/features/odl-openflowplugin-flow-services-rest/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>odl-openflowplugin-flow-services-rest</artifactId>
     <packaging>feature</packaging>
-    <version>0.21.2</version>
+    <version>0.21.3-SNAPSHOT</version>
 
     <name>OpenDaylight :: Openflow Plugin :: Flow Services :: REST</name>
 
