--- a/features/pom.xml
+++ b/features/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>features-aggregator</artifactId>
     <packaging>pom</packaging>
-    <version>0.21.2</version>
+    <version>0.21.3-SNAPSHOT</version>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
