--- a/srm/pom.xml
+++ b/srm/pom.xml
@@ -17,7 +17,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html INTERNAL
 
     <groupId>org.opendaylight.openflowplugin</groupId>
     <artifactId>srm-aggregator</artifactId>
-    <version>0.21.2</version>
+    <version>0.21.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
